plugins {
    id 'java-library'
    id 'maven'
}

group 'org.fpeterek.flightlidar48.database'
version '1.0'

targetCompatibility = '14'
sourceCompatibility = '14'

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile 'joda-time:joda-time:2.10.8'
    compile 'org.postgresql:postgresql:42.2.12'
    compile 'org.json:json:20200518'
}

compileJava {
    options.compilerArgs += ['--enable-preview']
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs += '--enable-preview'
}

tasks.withType(Test).all {
    jvmArgs += '--enable-preview'
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}

jar {
    archiveName 'database.jar'
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}
